# haggcat

./: .gitignore  README.md  build  cabal.config  ghci  haggcat.cabal  haskell-aggcat.cabal
src/: Aggcat.hs  Haggcat.hs
src/Aggcat/: Saml.hs  Types.hs
src/Haggcat/: Classes.hs  Client.hs  Instances.hs  JSON.hs  Saml.hs  TestHelper.hs  Types.hs
src/Haggcat/JSON/: Address.hs  Decoder.hs  Institution.hs  Keys.hs
tests/: IntegrationTests.hs
