name:           haggcat
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         Cary Robbins

Library
  hs-source-dirs:   src
  build-depends:    base >= 4
                  , aeson
                  , async
                  , base64-bytestring
                  , bytestring
                  , conduit
                  , cryptohash
                  , crypto-pubkey-openssh
                  , filepath
                  , hoauth
                  , http-conduit
                  , MissingH
                  , old-locale
                  , parallel
                  , regex-compat
                  , RSA
                  , SHA
                  , time
                  , transformers
                  , uuid
  exposed-modules:  Haggcat.Classes
                  , Haggcat.Client
                  , Haggcat.Instances
                  , Haggcat.Saml
                  , Haggcat.TestHelper
                  , Haggcat.Types
  extensions:       OverloadedStrings
  ghc-options:      -Wall

Test-Suite integration-test
  type:             exitcode-stdio-1.0
  main-is:          IntegrationTests.hs
  hs-source-dirs:   tests
  build-depends:    haggcat
                  , base >= 4
                  , bytestring
                  , HUnit
                  , test-framework
                  , test-framework-hunit
                  , test-framework-th
  extensions:       OverloadedStrings
                  , TemplateHaskell

