name:           haskell-aggcat
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Cary Robbins

library
  hs-source-dirs:   src
  build-depends:    base >= 4,
                    aeson == 0.6.2.1,
                    base64-bytestring,
                    bytestring == 0.9.2.1,
                    conduit == 1.0.9.2,
                    cryptohash == 0.11.1,
                    http-conduit == 1.9.5.2,
                    MissingH == 1.2.0.2,
                    old-locale == 1.0.0.4,
                    regex-compat,
                    RSA,
                    time == 1.4,
                    tls-extra == 0.6.6,
                    uuid
  exposed-modules:  Aggcat,
                    Aggcat.Saml
  ghc-options:      -Wall

