name:           haskell-aggcat
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Cary Robbins

library
  hs-source-dirs:   src
  build-depends:    base >= 4,
                    aeson,
                    base64-bytestring,
                    bytestring,
                    conduit,
                    cryptohash,
                    http-conduit,
                    MissingH,
                    old-locale,
                    regex-compat,
                    RSA,
                    time,
                    tls-extra,
                    uuid
  exposed-modules:  Aggcat,
                    Aggcat.Saml
  ghc-options:      -Wall

